example/src/snapshots/rust_sitter_example__words__tests__words_grammar-2.snap
---
source: example/src/words.rs
expression: "grammar::parse(\"hello\")"
---
Err(
    [
        ParseError {
            reason: FailedNode(
                [],
            ),
            start: 0,
            end: 5,
        },
    ],
)
