example/src/snapshots/rust_sitter_example__words__tests__words_grammar-3.snap
---
source: example/src/words.rs
expression: "grammar::parse(\"ifhello\")"
---
Ok(
    Words {
        _words: [
            Ident(
                "ifhello",
            ),
        ],
    },
)
