example/src/snapshots/rust_sitter_example__words__tests__words_grammar-4.snap
---
source: example/src/words.rs
expression: "grammar::parse(\"if hello\")"
---
Ok(
    Words {
        _words: [
            Keyword(
                (),
            ),
            Ident(
                "hello",
            ),
        ],
    },
)
