example/src/snapshots/rust_sitter_example__words__tests__words_grammar.snap
---
source: example/src/words.rs
expression: "grammar::parse(\"if\")"
---
Err(
    [
        ParseError {
            reason: FailedNode(
                [],
            ),
            start: 0,
            end: 2,
        },
    ],
)
